force-app/main/default/objects/Record__c/Record__c.object-meta.xml
<CustomObject>
    <label>Record</label>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>record_no</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>