force-app/main/default/objects/Record__c/fields/Appointment__c.field-meta.xml
<CustomField>
    <fullName>Appointment__c</fullName>
    <label>Appointment</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>