force-app/main/default/objects/Record__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient</label>
    <referenceTo>Patient__c</referenceTo>
    <relationshipLabel>Records</relationshipLabel>
    <relationshipName>Records</relationshipName>
    <type>Lookup</type>
</CustomField>