force-app/main/default/objects/Record__c/fields/patient_ID__c.field-meta.xml
<CustomField>
    <fullName>patient_ID__c</fullName>
    <label>patient_ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>