force-app/main/default/objects/Record__c/fields/Receptionist__c.field-meta.xml
<CustomField>
    <fullName>Receptionist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Receptionist</label>
    <referenceTo>Receptionist__c</referenceTo>
    <relationshipLabel>Records</relationshipLabel>
    <relationshipName>Records</relationshipName>
    <type>Lookup</type>
</CustomField>